--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
+<nav>
+  <app-nav> </app-nav>
+</nav>
+<app-input>
+</app-input>
+
+
+<h1>Issue Tracker</h1>
+
+<router-outlet></router-outlet>
+
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
